# tickerwatcher

./: stack.yaml  tickerwatcher.cabal
app/: Main.hs
src/: Trigger.hs
src/Google/: SendMail.hs
src/PriceAPI/: CryptoWatch.hs
