name:                tickerwatcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/karshan/tickerwatcher
license-file:        LICENSE
author:              Karshan Sharma
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Trigger
                     , PriceAPI.CryptoWatch
                     , Google.SendMail
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , base64-bytestring
                     , containers
                     , http-client
                     , http-client-tls
                     , lens
                     , mime-mail
                     , mtl
                     , protolude
                     , servant
                     , servant-client
                     , text
                     , gogol
                     , gogol-gmail
  default-language:    Haskell2010

executable tickerwatcher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tickerwatcher
                     , containers
                     , lens
                     , process
                     , protolude
                     , text
                     , time
  default-language:    Haskell2010
